--- a/assignment03/src/temperature-monitoring-subsystem/platformio.ini
+++ b/assignment03/src/temperature-monitoring-subsystem/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
+monitor_filters = esp32_exception_decoder
 lib_deps =
     PubSubClient
     Wifi
